force-app/main/default/objects/Debt_Collections__c/Debt_Collections__c.object-meta.xml
<CustomObject>
    <label>Debt Collection</label>
    <nameField>
        <displayFormat>COLL-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Debt Collections</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debt Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>