force-app/main/default/objects/Debt_Collections__c/fields/Action_Code__c.field-meta.xml
<CustomField>
    <fullName>Action_Code__c</fullName>
    <inlineHelpText>Select action code for last worked date</inlineHelpText>
    <label>Action Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Debt_Collection_Action_Code</valueSetName>
    </valueSet>
</CustomField>