force-app/main/default/objects/Debt_Collections__c/fields/Assign_to_Brand__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Brand__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to assign to brand. Check action will send automated email to Brand Contact details of the last collection effort and invoice details</inlineHelpText>
    <label>Assign to Brand</label>
    <type>Checkbox</type>
</CustomField>