force-app/main/default/objects/Debt_Collections__c/fields/Assigned_to_Brand_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Brand_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Input name of Brand Contact to assign Invoice collection efforts to.</inlineHelpText>
    <label>Assigned to Brand Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Debt Collections (Assigned to Brand Contact)</relationshipLabel>
    <relationshipName>Debt_Collections1</relationshipName>
    <type>Lookup</type>
</CustomField>