force-app/main/default/objects/Debt_Collections__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if action is billable.</inlineHelpText>
    <label>Billable?</label>
    <type>Checkbox</type>
</CustomField>