force-app/main/default/objects/Debt_Collections__c/fields/Collection_Effort_Level__c.field-meta.xml
<CustomField>
    <fullName>Collection_Effort_Level__c</fullName>
    <label>Collection Effort Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Collection_Effort_Level</valueSetName>
    </valueSet>
</CustomField>