force-app/main/default/objects/Debt_Collections__c/fields/Collection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Collection_Notes__c</fullName>
    <label>Collection Notes</label>
    <type>TextArea</type>
</CustomField>