force-app/main/default/objects/Debt_Collections__c/fields/Debt_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Debt_Collection_Status__c</fullName>
    <inlineHelpText>Select Status - Promote Method as collection method escalates or resolved.</inlineHelpText>
    <label>Debt Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Debt_Collection_Status</valueSetName>
    </valueSet>
</CustomField>