force-app/main/default/objects/Debt_Collections__c/fields/Debtor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debtor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Debt Collections</relationshipLabel>
    <relationshipName>Debt_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>