force-app/main/default/objects/Debt_Collections__c/fields/Debtor_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Name__c</fullName>
    <formula>Invoice__r.Receiver_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debtor Name</label>
    <type>Text</type>
</CustomField>