force-app/main/default/objects/Debt_Collections__c/fields/Invoice_Balance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Balance__c</fullName>
    <formula>Invoice__r.Invoice_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>