force-app/main/default/objects/Debt_Collections__c/fields/Last_Known_Contact_Phone_or_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Last_Known_Contact_Phone_or_Mobile__c</fullName>
    <label>Last Known Contact Phone or Mobile</label>
    <type>Phone</type>
</CustomField>