force-app/main/default/objects/Debt_Collections__c/fields/Last_Known_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Known_Email__c</fullName>
    <formula>Debtor_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Known Email</label>
    <type>Text</type>
</CustomField>