force-app/main/default/objects/Debt_Collections__c/fields/Last_Worked_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Worked_Date__c</fullName>
    <inlineHelpText>Date and time collector last attempt at collections effort</inlineHelpText>
    <label>Last Worked Date</label>
    <type>DateTime</type>
</CustomField>