force-app/main/default/objects/Debt_Collections__c/fields/Next_Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Work_Date__c</fullName>
    <inlineHelpText>Next schedule follow-up date</inlineHelpText>
    <label>Next Work Date</label>
    <type>DateTime</type>
</CustomField>