force-app/main/default/objects/Debt_Collections__c/fields/Payment_Amount_Committed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_Committed__c</fullName>
    <inlineHelpText>Enter in amount Debtor committed to paying</inlineHelpText>
    <label>Payment Amount Committed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>