force-app/main/default/objects/Debt_Collections__c/fields/Payment_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Commit_Date__c</fullName>
    <inlineHelpText>Date which Debtor committed to make payment on amount past due</inlineHelpText>
    <label>Payment Commit Date</label>
    <type>Date</type>
</CustomField>